Changes for 2.0.4rc1

New features:
........S. [ZBX-5525] renamed macro {TRIGGER.COMMENT} to {TRIGGER.DESCRIPTION} (Sasha)

Bug fixes:
...G...... [ZBX-5609] fixed defaults for parameters of vfs.dev.read/write items in "zabbix_agentd -p" (Sasha)
...G...... [ZBX-5552] fixed processing of vm.memory.size[total] under FreeBSD (Sasha)
.......PS. [ZBX-5572] fixed trivial compilation warnings (Sasha)

--------------------------------------------------------------------------------
Changes for 2.0.3

2.0.3rc2 was released as 2.0.3 without any changes

--------------------------------------------------------------------------------
Changes for 2.0.3rc2

Bug fixes:
.......PS. [ZBX-5625] fixed resolving of host and template-level macros in SNMP OID field (Sasha)
..F....... [ZBX-5627] fixed missed placeholder brackets in multiple pages (Eduard, Pavels)
..F....... [ZBX-5578] fixed multiple IE issues in screens (Eduard)
..F....... [ZBX-5612] fixed inability to view item data overview when host group doesn't have any triggers (Toms)

--------------------------------------------------------------------------------
Changes for 2.0.3rc1

New features:
...GI..... [ZBX-5171] got rid of agent ipv6 library dependency on older HP-UX machines (dimir)
........S. [ZBX-5450] added support of "KMGTsmhdw" suffixes in the second parameter of count() function (Sasha)
A.F....... [ZBX-1357] added American English translation; thanks to Zabbix translators (Richlv)
A......... [ZBX-2060] implemented the "expandExpression" parameter for the trigger.get and triggerprototype.get methods (Pavels)
A.F....... [ZBXNEXT-1253] implemented flicker-free screens (Eduard)
........S. [ZBX-5318] added remote commands in expanded {ESC.HISTORY} macro (Sasha)
A.F....... [ZBX-1357] added Chinese (Taiwan) translation; thanks to Zabbix translators (Richlv)